--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=MunichTechExpoBackend
 APP_ENV=local
-APP_KEY=base64:jPTNnq2eg1UHuCF8H7SFlaRynXQE2tvSwpqPz9hzeHY=
+APP_KEY=base64:yOEtAopiBLddkeEGfTnr0+tefZXNkN/MIz/ba99mQXM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=munichtech_expo
 DB_USERNAME=root
 DB_PASSWORD=
 
